--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: Run Unit Tests
+        run: go test ./internal/...
+
       - name: Force Failure
         run: go version
 
