Modified ci.yml to run all unit tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,8 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Run Unit Tests
-        run: go test ./internal/...
+      - name: Run All Tests
+        run: go test ./...
 
-      - name: Force Failure
-        run: go version
+
 
