--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           go-version: "1.23.0"
 
       - name: Run All Tests
-        run: go test ./...
+        run: go test -cover ./...
 
 
 
