--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: Style
+        run: test -z $(go fmt ./...)
+
       - name: Run All Tests
         run: go test -cover ./...
 
