--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,13 @@ jobs:
           go-version: "1.23.0"
 
       - name: Check formatting
-        run: test -z $(go fmt ./...)
+        run: |
+            go_fmt_result=$(gofmt -l .)
+            if [[ -n "$go_fmt_result" ]]; then
+              echo "The following files are not formatted correctly:"
+              echo "$go_fmt_result"
+              exit 1
+            fi
 
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
