--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,22 +1,38 @@
 name: cd
-
 on:
   push:
     branches: [main]
-
 jobs:
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest ### Make sure you use ubuntu and not AMazon Linux
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          go-version: "1.23.0" # Ensure this matches your desired Go version
-
-      - name: Build app
-        run: scripts/buildprod.sh
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} ### isntead of aws keys, use IAM to allow Github access to AWS resources
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1 # Replace with your desired region
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+      - name: Build and push Docker image
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: your-ecr-repo-name # Replace with your ECR repo name
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          # Build the Docker image
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          # Push the image to ECR
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      - name: Deploy to Amazon ECS
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: your-task-definition.json # Reference to a task definition file
+          service: your-ecs-service-name # Replace with your ECS service name
+          cluster: your-ecs-cluster-name # Replace with your ECS cluster name
+          wait-for-service-stability: true
