--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,11 +13,11 @@ on:
 # A simple set of global environment variables for easy configuration.
 env:
   AWS_REGION: us-east-1 # The AWS region where your resources are located.
-  ECR_REPOSITORY: your-ecr-repo-name # The name of your ECR repository.
-  ECS_CLUSTER: your-ecs-cluster-name # The name of your ECS cluster.
-  ECS_SERVICE: your-ecs-service-name # The name of your ECS service.
-  ECS_TASK_DEFINITION: your-task-definition.json # The path to your task definition file.
-  CONTAINER_NAME: your-container-name # The name of the container in your task definition.
+  ECR_REPOSITORY: notely-repo # The name of your ECR repository.
+  ECS_CLUSTER: notely-cluster # The name of your ECS cluster.
+  ECS_SERVICE: notely-service # The name of your ECS service.
+  ECS_TASK_DEFINITION: notely-deployment.json # The path to your task definition file.
+  CONTAINER_NAME: notely-container # The name of the container in your task definition.
 
 jobs:
   deploy:
